--- a/airflow.cfg
+++ b/airflow.cfg
@@ -114,7 +114,7 @@ donot_pickle = False
 dagbag_import_timeout = 30
 
 # The class to use for running task instances in a subprocess
-task_runner = BashTaskRunner
+task_runner = StandardTaskRunner
 
 # If set, tasks without a `run_as_user` argument will be run with this user
 # Can be used to de-elevate a sudo user running Airflow when executing tasks
@@ -215,10 +215,10 @@ web_server_worker_timeout = 120
 # Number of workers to refresh at a time. When set to 0, worker refresh is
 # disabled. When nonzero, airflow periodically refreshes webserver workers by
 # bringing up new ones and killing old ones.
-worker_refresh_batch_size = 1
+worker_refresh_batch_size = 4
 
 # Number of seconds to wait before refreshing a batch of workers.
-worker_refresh_interval = 30
+worker_refresh_interval = 5
 
 # Secret key used to run your flask app
 secret_key = temporary_key
@@ -653,4 +653,5 @@ tolerations =
 # formatting as supported by airflow normally.
 [cwl]
 tmp_folder = /tmp/airflow 
+jobs = /hive/users/blood/workflow/cwl-airflow/cwl-jobs
 
