Updates suggested for airflow-cwl

--- a/airflow.cfg
+++ b/airflow.cfg
@@ -21,7 +21,7 @@ remote_base_log_folder =
 encrypt_s3_logs = False
 
 # Logging level
-logging_level = INFO
+logging_level = DEBUG
 fab_logging_level = WARN
 
 # Logging class
@@ -87,7 +87,7 @@ parallelism = 32
 dag_concurrency = 16
 
 # Are DAGs paused by default at creation
-dags_are_paused_at_creation = True
+dags_are_paused_at_creation = False
 
 # When not using pools, tasks are run in the "default pool",
 # whose size is guided by this config element
@@ -272,7 +272,7 @@ log_fetch_timeout_sec = 5
 
 # By default, the webserver shows paused DAGs. Flip this to hide paused
 # DAGs by default
-hide_paused_dags_by_default = False
+hide_paused_dags_by_default = True
 
 # Consistent page size across all listing views in the UI
 page_size = 100
@@ -417,7 +417,7 @@ run_duration = -1
 min_file_process_interval = 0
 
 # How often (in seconds) to scan the DAGs directory for new files. Default to 5 minutes.
-dag_dir_list_interval = 300
+dag_dir_list_interval = 30
 
 # How often should stats be printed to the logs
 print_stats_interval = 30
