Additions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 airflow.cfg
-__pycache__
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
