update lint config to reflect Matt prefs; see #21

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,4 @@
 [flake8]
+max-line-length = 100
 ignore =
-  E501
-  # Line length: Biggest offenders are tutorial files which may be removed?
-  # https://github.com/hubmapconsortium/airflow-dev/issues/22
+  W503 # "line break before binary operator": Prefer operator at start of line so the context is clear.
